28-Aug-2014 Added a new field attribute, Bam.Core.SiblingModulesAttribute. This can be used, in place of Bam.Core.RequiredModulesAttribute, to indicate that other modules should be considered as siblings, so if the primary module is a top level (i.e. in the package bam is started in), then so are it's siblings. Allows other modules to built alongside, but not be forced to have an explicit requirement.

16-Aug-2014 Renamed project: This is now BuildAMation (bam), using the LGPL3 license.

11-Aug-2014 Some Mono versions do not fetch the productversion string from the assembly. Instead they fetch the major, minor, build parts. Implementing a fallback to always capture a version string for Opus.

05-Aug-2014 Removed MocOutputPath from the IMocOptions in QtCommon. The locations on the module now handle this (QtCommon.MocFile.OutputFile).

04-Aug-2014 Only add option updates from required dependencies themselves, not their entire dependency tree. This satisfies dependencies for explicit dynamic library loading with LoadLibrary and dlopen, but does not bring in option updates that are not required to build.

30-Jul-2014 Added Opus.Core.IIsGeneratedSource to identify modules that generate source to be compiled.

29-Jul-2014 Removed FileUtilities package. This has been superseded by the Publisher package.

29-Jul-2014 Removed obsolete test packages, BundlingTest, CopyTest1, and Symlinks. These have all been replaced with Publishing.

25-Jul-2014 Removed Opus.Core.Dependency.GetModuleBuildDirectory() and GetTargettedModuleBuildDirectory(). Use the *Location() replacements instead.

22-Jul-2014 Large refactor of the internal dependency generation engine. Added Locations as a file/directory/symlink abstraction. Introduced Publisher-dev package to handle making a runnable bundle.
